Fix meta box on iphone

--- a/wp-content/themes/hmr-theme/assets/css/less/views/capabilities-single.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/views/capabilities-single.less
@@ -88,6 +88,14 @@ ul.fullsize {
 		bottom:6%;
 		text-align:center;
 		z-index:100;
+		@media (max-width:1200px) {
+			width: 60%;
+			left: 20%;
+		}
+		@media (max-width:768px) {
+			width: 80%;
+			left: 10%;
+		}
 		.translate3d(0,0,0);
 		.btn {
 			cursor: pointer;
